--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -12,6 +12,7 @@ library(sigr)
 library(magrittr)
 library(ggmosaic)
 library(dplyr)
+library(papaja)
 # For overriding MASS select() 
 select <- dplyr::select
 ```
@@ -241,16 +242,27 @@ For our initial variables, *frequency of going out with friends*, *gender*, *lev
 
 
 ```{r alc_glm_first_coef}
-coef(alc_glm_first)
+coefficient_names <- c("gooutvlow","gooutlow","gooutmod","sex-male","absent8<")
+coefficients <- round(coef(alc_glm_first)[c(1,2,3,6,10)],2)
+names(coefficients)  <- coefficient_names
+knitr::kable(coefficients, col.names = "Coefficient") 
 ```
 
-Sukupuoli on luokiteltu muuttuja ja sen kertoimen tulkinta on erilainen kuin muiden muuttujien kertoimien tulkinta. R on valinnut naiset vertailuryhmäksi ja miehet ovat selittävä muuttuja. Vertailuryhmän eli naisten kerroin on mallin vakiotermi. Miesten kerroin kuvaa eroa vakiotermiin eli naisten kertoimeen. Miesten todellinen kerroin on vakiotermi-miesten kerroin eli noin -1.08-0.78=-0.3. Selittäjistä tilastollisesti merkitsevä kertoimen estimaatti on poissaoloilla, opiskeluun käytetyllä ajalla, miehillä ja vakiotermillä. Se että miesten kertoimen estimaatti on tilastollisesti merkitsevä tarkoittaa että hypoteesi että vakiotermin eli vertailuryhmän kertoimen ja miesten kertoimen erotus on nolla voidaan hylätä yhden prosentin merkitsevyystasolla. 
 
 
 ```{r odds_ratio_first, echo = FALSE, message = FALSE}
-odds_ratio <- exp(coef(alc_glm_first))
-ci <- exp(confint(alc_glm_first)) 
-knitr::kable(cbind(odds_ratio, ci), col.names = c("OR","CI (2,5%)","CI 97,5%"))
+model_summary <- apa_print(alc_glm_first)
+odds_ratio <- exp(coef(alc_glm_first)[c(1,2,3,6,10)])
+odds_df <- data.frame(tibble::rownames_to_column(as.data.frame(odds_ratio)))
+odds_df[odds_df$rowname == "absnt(7,45]",]$rowname <- "abseentism"
+odds_df$rowname <- tolower(odds_df$rowname)
+names(odds_df) <- c("predictor","odds_ratio")
+model_summary_table <- data.frame(model_summary$table[c(1,2,3,6,10),])
+model_summary_table[model_summary_table$predictor == "Absnt7,45]",]$predictor <- "abseentism"
+model_summary_table$predictor <- tolower(model_summary_table$predictor)
+model_summary_table <- sjlabelled::remove_all_labels(model_summary_table)
+odds_df <- sjlabelled::remove_all_labels(odds_df)
+knitr::kable(model_summary_table %>% inner_join(odds_df))
 ```
 
 ```{r predict-using-simple-model, echo = FALSE}
