--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -234,35 +234,31 @@ summary(alc_glm_first)
 For our initial variables, *frequency of going out with friends*, *gender*, *level of abseentism* and *time dedicated to studies* make a statistically significant effect on level of drinking
 
 
-```{r }
+```{r, eval = FALSE, echo = FALSE }
 # Present and interpret the coefficients of the model as odds ratios and provide confidence intervals for them. Interpret the results and compare them to your previously stated hypothesis. 
 
 # Hint: If your model includes factor variables see for example the first answer of this stackexchange thread on how R treats and how you should interpret these variables in the model output (or use some other resource to study this). (0-5 points)
 ```
 
 
-```{r alc_glm_first_coef}
-coefficient_names <- c("gooutvlow","gooutlow","gooutmod","sex-male","absent8<")
-coefficients <- round(coef(alc_glm_first)[c(1,2,3,6,10)],2)
-names(coefficients)  <- coefficient_names
-knitr::kable(coefficients, col.names = "Coefficient") 
-```
-
 
 
 ```{r odds_ratio_first, echo = FALSE, message = FALSE}
 model_summary <- apa_print(alc_glm_first)
-odds_ratio <- exp(coef(alc_glm_first)[c(1,2,3,6,10)])
+odds_ratio <- exp(coef(alc_glm_first)[c(1,2,3,6,10,12)])
 odds_df <- data.frame(tibble::rownames_to_column(as.data.frame(odds_ratio)))
-odds_df[odds_df$rowname == "absnt(7,45]",]$rowname <- "abseentism"
 odds_df$rowname <- tolower(odds_df$rowname)
+odds_df[odds_df$rowname == "absnt>8",]$rowname <- "abseentism"
 names(odds_df) <- c("predictor","odds_ratio")
-model_summary_table <- data.frame(model_summary$table[c(1,2,3,6,10),])
-model_summary_table[model_summary_table$predictor == "Absnt7,45]",]$predictor <- "abseentism"
+odds_df$odds_ratio <- round(odds_df$odds_ratio, 2)
+model_summary_table <- data.frame(model_summary$table[c(1,2,3,6,10,12),])
+model_summary_table[model_summary_table$predictor == "Absnt>8",]$predictor <- "abseentism"
 model_summary_table$predictor <- tolower(model_summary_table$predictor)
 model_summary_table <- sjlabelled::remove_all_labels(model_summary_table)
 odds_df <- sjlabelled::remove_all_labels(odds_df)
-knitr::kable(model_summary_table %>% inner_join(odds_df))
+summary_col_names <- c("Predictor", "Estimate", "CI (95%)", "t", "p-value", "Odds ratio")
+knitr::kable(
+  model_summary_table %>% inner_join(odds_df), col.names = summary_col_names)
 ```
 
 ```{r predict-using-simple-model, echo = FALSE}
@@ -271,7 +267,12 @@ predicted_use <- predict(alc_glm_first, type = "response")
 alc_simple$prob_high_use <- predicted_use
 alc_simple$predict_high_use <- (alc_simple$prob_high_use) > 0.5
 ```
-
+goout1	-2.35
+goout2	-1.96
+goout3	-1.71
+sexm	0.77
+abseentism	1.05
+studytime 0.92
 
 
 
@@ -340,10 +341,23 @@ knitr::kable(
 Crosstables indicate that model tends to overpredict the proportion of students who are low-drinkers (actual) and underpredict the proportion of high-drinking students.
 
 
-```{r odds-ratio, echo = FALSE, message = FALSE}
-odds_ratio <- round(exp(coef(alc_glm_second)),2)
-ci <- round(exp(confint(alc_glm_second)),2) 
-knitr::kable(cbind(odds_ratio, ci), col.names = c("OR","CI (2,5%)","CI 97,5%"))
+```{r odds_ratio_final, echo = FALSE, message = FALSE, eval = TRUE}
+model_summary <- apa_print(alc_glm_second)
+odds_ratio <- exp(coef(alc_glm_second)[c(1,2,3,6,10)])
+odds_df <- data.frame(tibble::rownames_to_column(as.data.frame(odds_ratio)))
+odds_df[odds_df$rowname == "absnt>8",]$rowname <- "abseentism"
+odds_df$rowname <- tolower(odds_df$rowname)
+names(odds_df) <- c("predictor","odds_ratio")
+odds_df$odds_ratio <- round(odds_df$odds_ratio, 2)
+model_summary_table <- data.frame(model_summary$table[c(1,2,3,6,10),])
+model_summary_table[model_summary_table$predictor == "Absnt>8",]$predictor <- "abseentism"
+model_summary_table$predictor <- tolower(model_summary_table$predictor)
+model_summary_table <- sjlabelled::remove_all_labels(model_summary_table)
+odds_df <- sjlabelled::remove_all_labels(odds_df)
+summary_col_names <- c("Predictor", "Estimate", "CI (95%)", "t", "p-value", "Odds ratio")
+knitr::kable(
+   model_summary_table %>% inner_join(odds_df), col.names = summary_col_names)
+
 ```
 
 
