--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -23,16 +23,19 @@ library(ggord)
 library(skimr)
 library(sjstats)
 library(explor)
+library(stargazer)
 # For overriding MASS select() 
 select <- dplyr::select
 set.seed(2018)
 ```
 
 
-# Week 4 – Dimensionality reduction
+# Week 4 – Dimensionality reduction techniques
 
 
 ## Exploring human development data with principal component analysis
+
+The 'human' dataset originates from the United Nations Development Programme.
 
 ```{r chapter-5-load-data, echo = FALSE, message = FALSE, cache = TRUE}
 human <- read.csv(here("data/human.csv"), row.names = 1)
@@ -51,6 +54,20 @@ GGally::ggpairs(human)
 
 Gross National Income is highly skewed variable because there are six outliers 
 
+```{r summary-table, echo = FALSE, results = "asis" }
+stargazer(
+    human, 
+    type = "html", 
+    summary.stat = c("min", "p25", "median", "p75", "max", "median", "sd"),
+    digit.separator = "",
+    digits = 2,
+    decimal.mark = ','
+)
+```
+
+
+
+
 ```{r human-corrplot, eval = TRUE, echo = FALSE, fig.width = 9, fig.height = 9}
 
 corrplot(
@@ -59,7 +76,7 @@ corrplot(
 )
 ```
 
-Unexpectedly, maternal mortality and life expectency are highly correlated (-0.86) as well as high birth rate and maternal mortality (0.76). Variables regarding education have also strong correlation with maternal mortality, so that higher values in education variables, lead to lower value in maternal mortality rate. Secondary education of women have an association to lower birth rate (-0.68), as well as higher life expectancy (-0.72). Rather surprisingly, women's representation in the parliament doesn't seem to have an association with any of variables or the association is very low. As one might expect, maternal mortality and high birth rate are associated with low GNI.
+Unexpectedly, maternal mortality and life expectency are highly correlated (-0.86) as well as high birth rate and maternal mortality (0.76). Variables regarding education have also strong correlation with maternal mortality, so that higher values in education variables, lead to lower value in maternal mortality rate. Secondary education of women have an association to lower birth rate (-0.68), as well as higher life expectancy (-0.72). Rather surprisingly, women's representation in the parliament doesn't seem to have an association with any of other variables or the association is very low. As one might expect, maternal mortality and high birth rate are associated with low GNI.
 
 ```{r eval = FALSE, echo = FALSE}
 # Perform principal component analysis (PCA) on the not standardized human data.
@@ -70,8 +87,15 @@ Unexpectedly, maternal mortality and life expectency are highly correlated (-0.8
 ```
 
 ```{r pca-incorrectly}
+pca_summary_rows <- c(
+  "Standard deviation",
+  "Eigenvalue",
+  "Proportion of Variance",
+  "Cumulative Proportion")
+
 pca_human <- prcomp(human)
 pca_summary <- pca(pca_human)
+rownames(pca_summary) <- pca_summary_rows
 ```
 
 ```{r, echo = FALSE}
@@ -95,8 +119,10 @@ ggord(pca_human, arrow = 0.4, txt = 5, vec_ext = 4, size = 0.06) + theme_minimal
 ```
 
 ```{r pca-done-right}
+# Use built-in scaling in prcomp() -function
 pca_human_final <- prcomp(human, scale = TRUE, center = TRUE)
 pca_summary_final <- pca(pca_human_final)
+rownames(pca_summary_final) <- pca_summary_rows
 ```
 
 
@@ -126,14 +152,9 @@ ggord(
 # (0-2 points)
 ```
 
+The first principal component explains 57.03% of the total variance of the dataset, and the second principal component explains 15.6% of it. It seems that the first principal component represents *classical welfare state*, eg. healthcare and access to education. The second principal component represents *gender equality*, eg. do women have equal rights to participate in politics and working life. Looking the biplot, it is evident that having an all-embracing welfare state doesn't necessarily make a country gender-equal and vice-versa, Qatar (and other oil-rich states) and Rwanda exemplifying this phenomenon.
 
-```{r eval = FALSE, echo = FALSE}
-# Give your personal interpretations of the first two principal component
-# dimensions based on the biplot drawn after PCA on the standardized human data.
-# (0-2 points)
-
-```
-
+Our initial exploration of the data using a correlation matrix revealed the complex relationship between variables partially but usage of PCA biplot makes it possible to understand the whole dataset in an intuitive way almost at a glance.
 
 ## Exploring tea survey data with multiple correspondence analysis
 
@@ -151,18 +172,18 @@ data(tea)
 
 Questions from From Exploratory Multivariate Analysis by Example Using R, Second Edition, 131-132
 
-1. What kind of tea do you drink the most (black tea, green, tea, flavored tea)
+1. What kind of tea do you drink the most (black tea, green tea, flavored tea)
 2. How do you take your tea (nothing added, with lemon, with milk, other)
 3. What kind of tea you buy ? (tea bags, loose tea, both)
 4. Do you add sugar to your tea (yes, no)?
 5. Where do you buy your tea (supermarket, specialist shop, both)
-6. What kind of tea you buy (cheapest supermarket brand, well-known brand, luxury, it varies)
+6. What kind of tea you buy (cheapest supermarket brand, well-known brand, upscale, it varies)
 7. How ofter do you drink tea (more than twice a day, once a day, 3 to 6 times a week, once or twice per week)?
 
 Location in wich the tea is drunk (yes/no):
 
 8. Do you drink tea at home?
-9 Do you drink tea at work?
+9. Do you drink tea at work?
 10. Do you drink tea in tearooms or coffee shops?
 11. Do you drink tea at frinds houses?
 12. Do you drink tea in restaurants?
@@ -189,15 +210,60 @@ Questions about the image of the product (yes/no):
 29. Will tea help you to lose weight?
 30. Is tea a stimulant?
 31. Is tea a relaxant?
-32. Does tea have any effect on your overall health?”
+32. Does tea have any effect on your overall health?
 
-Additionally, there were four background questions: 
-sex, professional category (farmer, manual labourer, professional, senior management, employee, other profession, student, unemployed), age, and whether or not the participant regularly played sports (yes or no).
+Additionally, there were four background questions regarding: 
+* sex
+* professional category (farmer, manual labourer, professional, senior management, employee, other profession, student, unemployed)
+* age
+* regular participation in sports (yes or no).
 
 ```{r variable-overview, results='asis'}
 skim(tea) %>% skimr::kable()
 ```
 
+```{r explore-data-overview, cache = TRUE, echo = FALSE}
+# The purpose of your analysis is to study the relationships between 
+# high/low alcohol consumption and some of the other variables in the data. 
+# To do this, choose 4 interesting variables in the data and for each of them
+# present your personal hypothesis about their relationships with alcohol 
+# consumption. (0-1 point)
+taumatrix <- GKtauDataframe(tea %>% select(-age))
+```
+Therefore, let's use [Goodman-Kruskal tau](https://cran.r-project.org/web/packages/GoodmanKruskal/vignettes/GoodmanKruskal.html) to explore associations between variables in the dataset. 
+
+
+
+```{r tau-matrix, fig.width=16, fig.height=12, echo = FALSE, cache = TRUE}
+plot(taumatrix,colorPlot = FALSE,diagSize = 0.2)
+```
+
+Going trough the Goodman-Kruskal tau-matrix, we can observe few interesting associations between variables. Overall, associations are not very strong, but taking into account associations which are stronger than mean value for association (0.08).
+
+* gender and considering tea feminine
+* age and considering tea feminine
+* age and a belief that tea has an effect on overall health
+* a belief that tea has an effect on overall health and and considering tea healthy
+* type of the tea and age
+* type of the tea and habit of using sugar
+* drinking tea at tearoom and buying tea from specialist shops
+* frequency of drinking tea and drinking tea at breakfast
+* price, type of tea and the place of purchase
+
+Even though we'll eventually use all variables in the MCA, let's observe few of these associations bit more closely, just for the sake of curiosity.
+
+```{r pair-comparison, cache = FALSE, echo = FALSE, fig.width=13, fig.height=9}
+ggpairs(tea %>% 
+  select(sex,age_Q,feminine,Tea,where,price))
+```
+
+* There are more female than male responders to the survey. Over the half of the responders are under 35.
+* It seems that the bulk of the tea is being bought from the chain stores and the preferred style is Earl Gray.
+* Interestingly, considering all answers tea is not considered feminine, but females tend to associate tea with femininity more often than men.
+
+### Drinkers of different types of tea 
+
+Let's use MCA to investigate, if there are statistically observable differences between groups of people who prefer different types of tea.
 
 ```{r, eval = FALSE, echo = FALSE}
 # Then do Multiple Correspondence Analysis on the tea data (or to a certain
@@ -217,14 +283,16 @@ tea_mca <- MCA(tea,
 ```{r variable-biplot, fig.width=10, fig.height=9}
 ggord(tea_mca,
       tea$Tea,
-      arrow = 0.4,
-      txt = 5,
-      vec_ext = 1.1,
+      arrow = 0.2,
+      txt = 3,
+      vec_ext = 1.05,
       size = 2,
       repel = TRUE) + theme_minimal()
 ```
 
+Looking the biplot graph, drinkers of different types of tea seem to somewhat differ. People who drink green and black tea are more often buying their tea from specialist shops, prefer unpackaged tea and dont't mind spending more money. Drinking Earl Gray seems to serve similiar purpose as habitual coffee drinking in Finland -- people drink it at work or with friends during lunch.
 
+It should be kept in mind that the proportion of green tea drinkers is very small compared to the friends of Earl Gray so that these conclusions based on biplot are not likely very strong.
 
 
 
@@ -232,6 +300,10 @@ ggord(tea_mca,
 # You can also explore other plotting options for MCA. Comment on the output of
 # the plots. (0-4 points)
 ```
+
+#### Extra plots
+
+The following interactive plot makes it possible to investigate which responses have the strongest contribution to the model. Darker the colour, stronger the contribution.
 
 ```{r contributions-plot, eval = TRUE, echo = FALSE }
 res <- explor::prepare_results(tea_mca)
@@ -243,8 +315,11 @@ explor::MCA_ind_plot(res, xax = 1, yax = 2,ind_sup = FALSE,
     xlim = c(-1, 1.44), ylim = c(-1.06, 1.38))
 ```
 
+
+*Scree plot* cat be used to visualize the percentage of inertia explained by MCA dimensions.
+
 ```{r eigvenvalues, cache = TRUE, eval = TRUE, echo = FALSE}
-fviz_eig(tea_mca, choice = "eigenvalue", geom = "bar")
+fviz_screeplot(tea_mca,geom = "bar")
 ```
 
 
